Fix styling to display even spacing in 3-day forecast

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -250,6 +250,10 @@ main {
   text-align: left;
 }
 
+.day-forecast p {
+  width: 100px;
+}
+
 /******************************************************************************/
 /* Selectors for the footer start here.
 /******************************************************************************/
